manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: zdrowejedzenie-client
  name: zdrowejedzenie-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zdrowejedzenie-client
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zdrowejedzenie-client
    spec:
      containers:
        - image: polregistry.azurecr.io/zdrowejedzenie-client:latest
          name: zdrowejedzenie-client
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zdrowejedzenie-client
  name: zdrowejedzenie-client
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: zdrowejedzenie-client
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zdrowejedzenie-client
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: zdrowejedzenie.fe6a0d090dd54915b798.eastus.aksapp.io
      http:
        paths:
          - backend:
              serviceName: zdrowejedzenie-client
              servicePort: 8080
            path: /
            pathType: Exact
          - backend:
              serviceName: zdrowejedzenie-gateway
              servicePort: 8080
            path: /gateway/(.+)
            pathType: ImplementationSpecific
          - backend:
              serviceName: exampleproject
              servicePort: 8080
            path: /example/(.+)
            pathType: ImplementationSpecific
          - backend:
              serviceName: zdrowejedzenie-users
              servicePort: 8080
            path: /users/(.+)
            pathType: ImplementationSpecific
          - backend:
              serviceName: zdrowejedzenie-products
              servicePort: 8080
            path: /products/(.+)
            pathType: ImplementationSpecific
          - backend:
              serviceName: zdrowejedzenie-payment
              servicePort: 8080
            path: /payment/(.+)
            pathType: ImplementationSpecific
          - backend:
              serviceName: zdrowejedzenie-orders
              servicePort: 8080
            path: /orders/(.+)
            pathType: ImplementationSpecific
